# apify-scrapy-executor

./: LICENSE  README.md  __init__.py  apify_scrapy_executor.py  setup.cfg
src/apify_scrapy_executor/: __init__.py  apify_scrapy_executor.py
