[metadata]
name = apify_scrapy_executor
version = 0.0.7
author = Hoang Anh Tuan
author_email = hoang.dusan@gmail.com
description = Executes migrated scrapy project to Apify platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spiduso/apify-scrapy-executor
project_urls =
    Bug Tracker = https://github.com/spiduso/apify-scrapy-executor/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
